--- a/contact.html
+++ b/contact.html
@@ -24,10 +24,10 @@ layout: default
         <p>
             <b>Asociacija "Atvirasis žemėlapis"</b><br>Dociškių g. 3-R20<br>Vilnius LT–06154<br>Lietuva<br>
         </p>
-        <p><i class="fa fa-phone"></i> +370 685 04737</p>
-        <p><i class="fa fa-phone"></i> +370 600 47434</p>
-        <p><i class="fa fa-envelope-o"></i> <a href="mailto:info@openmap.lt">info@openmap.lt</a>
-        </p>
+        <!--p><i class="fa fa-phone"></i> +370 685 04737</p-->
+        <!--p><i class="fa fa-phone"></i> +370 600 47434</p-->
+        <p><i class="fa fa-envelope-o"></i> <a href="mailto:info@openmap.lt">info@openmap.lt</a></p>
+        <p><i class="fa fa-id-card-o"></i> Įmonės kodas 304445189</p>
     </div>
 </div>
 <!-- /.row -->
