Conflicts: 	members/request.html

--- a/members/request.html
+++ b/members/request.html
@@ -43,7 +43,7 @@ layout: default
     <p>Pasirašius gausite pranešimą, kad dokumentas sėkmingai pasirašytas.</p>
     <p>Spauskite mygtuką „Atsisiųsti“, kad atsisiųstumėte jau <b>pasirašytą</b> dokumentą (pdf). Nesupainiokite su pradiniu pdf failu, kurį jūs sukūrėte.</p>
     <p><img src="/members/gosign5.png" alt="Pasirašyto dokumento atsisiuntimas" /></p>
-    <p>Gautą pasirašytą pdf failą siųskite adresu <a href="naryste@openmap.lt">naryste@openmap.lt</a></p>
+    <p>Gautą pasirašytą pdf failą siųskite adresu <a href="mailto:naryste@openmap.lt">naryste@openmap.lt</a></p>
     <p>Narystę tvarkantis žmogus toje pačioje gosign sistemoje patikrins, kas pasirašė atsiųstą dokumentą. Būsite įrašytas į asociacijos „Atvirasis žemėlapis“ narių sąrašą ir gausite apie tai elektroninį laišką tuo pačiu adresu, iš kurio siuntėte pdf failą.</p>
     <p>Sąraše bus laikoma tik: vardas, pavardė, įrašymo į sąrašą data.</p>
     <p>Sąrašą bet kuris narys galės pasižiūrėti asociacijos narių susitikimų metų arba paprašius. T.y. viešai (asociacijos svetainėje) sąrašas skelbiamas <b>nebus</b>.</p>
