--- a/legal/index.html
+++ b/legal/index.html
@@ -14,9 +14,9 @@ layout: default
     <div class="col-md-6 col-sm-12">
         <div class="panel panel-default text-center">
             <div class="panel-heading">
-                <h4>Įstatai</h4>
+                <h4><a href="/legal/istatai.html">Įstatai</a></h4>
                 <p>Oficialūs asociacijos įstatai</p>
-                <a href="/legal/istatai.pdf" class="btn btn-primary">Skaityti(pdf)</a>
+                <a href="/legal/istatai.pdf" class="btn btn-primary">Atsisiųsti (pdf)</a>
             </div>
         </div>
     </div>
