smulkūs paramos puslapio pataisymai

--- a/support/gpm_support.html
+++ b/support/gpm_support.html
@@ -8,7 +8,7 @@ layout: default
 		<h1 class="page-header">Narystė</h1>
 		<ol class="breadcrumb">
 			<li><a href="/">Pradžia</a></li>
-			<li class="active">Prašymas įstoti</li>
+			<li class="active">Parama</li>
 		</ol>
 	</div>
 </div>
@@ -19,7 +19,7 @@ layout: default
 
 	<!-- Membership request Column -->
     <div class="col-lg-12">
-        <h2 class="page-header">Prašymas skirti 2% GPM param1 asociacijai „Atvirasis žemėlapis“</h2>
+        <h2 class="page-header">Prašymas skirti 2% GPM paramą asociacijai „Atvirasis žemėlapis“</h2>
     </div>
     <div class="col-md-12 col-sm-12">
         <img class="img-responsive" src="/images/matrix-1019905_267x200.jpg" alt="" />
@@ -33,7 +33,7 @@ layout: default
     <li>Konferencijoms, seminarams, mokymams rengti.</li>
     </ul></p>
     <p>Prašymą skirti 2% GPM galima užpildyti atsispausdinus formą, ją užpildžius ir nuvežus į VMI arba išsiuntus paštu. Bet paprasčiausia prašymą užpildyti elektroniniu būdu. Tam užtruksite tik 5-10 minučių.</p>
-    <p>Elektroninį prašymą galite pateikti <a href="https://deklaravimas.vmi.lt">oficialioje VMI elektroninio deklaravimo sistemoje: https://deklaravimas.vmi.lt</a></p>
+    <p>Elektroninį prašymą galite pateikti <a href="https://deklaravimas.vmi.lt" target="_blank">oficialioje VMI elektroninio deklaravimo sistemoje: https://deklaravimas.vmi.lt</a></p>
     <p>Visų pirma turėsite prisijungti prie sistemos naudodami sau patogiausią autentikavimo būdą: gal per banką, gal naudodami e-parašą</p>
     <p>Prisijungę dešinėje pusėje spauskite nuorodą „Paramos skyrimas“:</p>
     <p><img src="parama1.png" alt="Nuoroda į Paramos prašymo teikimą" /></p>
@@ -54,7 +54,7 @@ layout: default
     <p>Užpildę formą spauskite mygtuką „Klaidų tikrinimas“. Jei viską įvedėte teisingai, ekrano apačioje atsidarys papildoma pranešimų skiltis, kurioje bus parašyta, kad klaidų yra 0 ir trys perspėjimai (informaciniai pranešimai). Jei tikrinimas rado klaidų - jas pataisykite. Tada galite spausti mygtuką „Pateikti deklaraciją“</p>
     <p><img src="parama4.png" alt="Prašymo pateikimas" /></p>
     <p>Viskas. Jūsų paramos teikimo prašymas pateiktas. Kurį laiką VMI sistema tikrins jūsų prašymą. Apie prašymo būseną galite sužinoti e-deklaravimo sistemos pateiktų dokumentų sąraše. Po kažkiek laiko (gal po valandos, gal po dienos, priklausomai nuo VMI sistemos užimtumo) gausite elektroninį laišką, kad jūsų prašymas teikti paramą priimtas.</p>
-    <p>Viskas. Ačiū! Metų pabaigoje jūsų parama pasieks asociaciją. Metų pradžioje asociacija teiks finansinę ataskaitą, kurioje matysis, kiek paramos gauta (nebus surašyti koknkretūs 2% GPM paramą skyrę asmenys, nes tokia informacija iki asociacijos neateina). Taip pat finansinėje ataskaitoje matysite, kaip/kur gauta parama buvo panaudota.</p>
+    <p>Viskas. Ačiū! Metų pabaigoje jūsų parama pasieks asociaciją. Metų pradžioje asociacija teiks finansinę ataskaitą, kurioje matysis, kiek paramos gauta (nebus surašyti konkretūs 2% GPM paramą skyrę asmenys, nes tokia informacija iki asociacijos neateina). Taip pat finansinėje ataskaitoje matysite, kaip/kur gauta parama buvo panaudota.</p>
     </div>
 </div>   
 <!-- /.row -->
