--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ layout: default
                 <p>....</p>
             </div>
         </div>
-        <div class="media">
+        <!--div class="media">
             <div class="pull-left">
                 <span class="fa-stack fa-2x">
                       <i class="fa fa-circle fa-stack-2x text-primary"></i>
@@ -89,7 +89,7 @@ layout: default
                 <h4 class="media-heading">Vadovai</h4>
                 <p>...</p>
             </div>
-        </div>
+        </div-->
         <div class="media">
             <div class="pull-left">
                 <span class="fa-stack fa-2x">
@@ -116,7 +116,7 @@ layout: default
                 <p>...</p>
             </div>
         </div>
-        <div class="media">
+        <!--div class="media">
             <div class="pull-left">
                 <span class="fa-stack fa-2x">
                       <i class="fa fa-circle fa-stack-2x text-primary"></i>
@@ -127,10 +127,10 @@ layout: default
                 <h4 class="media-heading">Paslaugos</h4>
                 <p>...</p>
             </div>
-        </div>
+        </div-->
     </div>
     <div class="col-md-4">
-        <div class="media">
+        <!--div class="media">
             <div class="pull-left">
                 <span class="fa-stack fa-2x">
                       <i class="fa fa-circle fa-stack-2x text-primary"></i>
@@ -141,7 +141,7 @@ layout: default
                 <h4 class="media-heading">Prototipavimas</h4>
                 <p>...</p>
             </div>
-        </div>
+        </div-->
         <div class="media">
             <div class="pull-left">
                 <span class="fa-stack fa-2x">
@@ -163,7 +163,7 @@ layout: default
             </div>
             <div class="media-body">
                 <h4 class="media-heading">Tinklaraštis</h4>
-                <p>...</p>
+                <p><a href="https://blog.openmap.lt" target="_blank">blog.openmap.lt</a></p>
             </div>
         </div>
     </div>
