Nuoroda į atvirus duomenys

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ layout: default
             </div>
             <div class="panel-body">
                 <p></p>
-                <a href="#" class="btn btn-default">Plačiau</a>
+                <a href="/atviri_duomenys" class="btn btn-default">Plačiau</a>
             </div>
         </div>
     </div>
