--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ layout: default
                 <p>...</p>
             </div>
         </div>
-        <!--div class="media">
+        <div class="media">
             <div class="pull-left">
                 <span class="fa-stack fa-2x">
                       <i class="fa fa-circle fa-stack-2x text-primary"></i>
@@ -124,10 +124,10 @@ layout: default
                 </span>
             </div>
             <div class="media-body">
-                <h4 class="media-heading">Paslaugos</h4>
-                <p>...</p>
+                <h4 class="media-heading">Mokymo medžiaga</h4>
+                <p><a href="/mokymo_medziaga">...</a></p>
             </div>
-        </div-->
+        </div>
     </div>
     <div class="col-md-4">
         <!--div class="media">
