Papildyta mokymo medžiaga: GIS, OpenGIS

--- a/mokymo_medziaga/index.html
+++ b/mokymo_medziaga/index.html
@@ -12,16 +12,21 @@ layout: default
 
 <!-- Content Row -->
 <div class="row">
-
     <div class="col-md-12 col-sm-12">
         <img class="img-responsive" src="/images/network-1019842_web_480x300.jpg" alt="" />
     </div>
     <div class="col-md-12 col-sm-12">
     <p>Žemiau pateikiamos nuorodos į mokymo medžiagą apie atvirą žemėlapį OpenStreetMap, kartografiją, GIS ir pan. Asociacija „Atvirasis žemėlapis“ <b>nėra</b> šios medžiagos autorė.</p>
     <p><ol>
+    <li><a href="http://www.geoportal.lt/geoportal/web/geografines-informacijos-mokymu-medziaga">Geografinės informacijos mokymų medžiaga</a>. Vancouver Island University (Kanada), Vilniaus Gedimino technikos universiteto, Lietuvos Žėmės ūkio akademija, UAB HNIT-Baltic</li>
     <li><a href="https://www.e-education.psu.edu/geog486/">Cartography and Visualization</a>. PennState College of Earth and Mineral Sciences. Department of Geography.</li>
     <li><a href="https://www.mapbox.com/map-design/">The Guide to Map Design</a>. MapBox</li>
     </ol></p>
+    <p>Konferencijos OpenGIS pristatymai</p>
+    <p><ol>
+    <li><a href="https://www.youtube.com/channel/UCYo1XF6horwIx0uFMpYwWfw">Video medžiaga</a></li>
+    <li><a href="https://www.slideshare.net/opengislt/presentations">Pristatymai</a></li>
+    </ol></p>
     </div>
-</div>   
+</div>
 <!-- /.row -->
