logotipas vietoje knygos

--- a/index.html
+++ b/index.html
@@ -6,18 +6,12 @@ layout: default
 
 <!-- Marketing Icons Section -->
 <div class="row">
-    <div class="col-lg-12">
-        <h1 class="page-header">
-            Asociacija "Atvirasis žemėlapis"
-        </h1>
+    <div class="col-lg-3">
+        <img class="img-responsive" src="/images/logo.png" alt="Logo" style="margin: 40px 0 0;">
     </div>
-</div>
-<div class="row">
-    <div class="col-md-6">
+    <div class="col-lg-9">
+        <h1 class="page-header">Asociacija "Atvirasis žemėlapis"</h1>
         <p>Ribotos civilinės atsakomybės viešasis juridinis asmuo, kurio tikslas yra suvienyti ir atstovauti atviro žemėlapio entuziastus, padėti tobulinti bei kurti juo paremtas technologijas, skleisti informaciją apie atvirą žemėlapį, rengti mokymo medžiagą ir vykdyti mokymus bei stiprinti ryšius su kitomis panašiomis organizacijomis.</p>
-    </div>
-    <div class="col-md-6">
-        <img class="img-responsive" src="/images/book.jpg" alt="">
     </div>
 </div>
 <!--p/-->
