Rašybos klaida: kabutės

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: default
         <img class="img-responsive" src="/images/logo.png" alt="Logo" style="margin: 40px 0 0;">
     </div>
     <div class="col-lg-9">
-        <h1 class="page-header">Asociacija "Atvirasis žemėlapis"</h1>
+        <h1 class="page-header">Asociacija „Atvirasis žemėlapis“</h1>
         <p>Ribotos civilinės atsakomybės viešasis juridinis asmuo, kurio tikslas yra suvienyti ir atstovauti atviro žemėlapio entuziastus, padėti tobulinti bei kurti juo paremtas technologijas, skleisti informaciją apie atvirą žemėlapį, rengti mokymo medžiagą ir vykdyti mokymus bei stiprinti ryšius su kitomis panašiomis organizacijomis.</p>
     </div>
 </div>
