2% paramos skyrimo laikotarpis

--- a/support/gpm_support.html
+++ b/support/gpm_support.html
@@ -50,6 +50,7 @@ layout: default
     <li>E2. Gavėjo identifikatorius - čia įveskite asociacijos „Atvirasis žemėlapis“ kodą: <b>304445189</b></li>
     <li>E3. Mokesčio dalies paskirtis - <b>PARAMA</b></li>
     <li>E4. Mokesčio dalies dydis - <b>2,00</b></li>
+    <li>E5. Mokesčių dalį skiriu iki mokestinio laikotarpio - <b>2021</b> (čia pasirenkate, kiek metų norite skirti paramą Atvirajam žemėlapiui, nieko nenurodžius parama bus skiriama vienus metus)</li>
     </ul></p>
     <p>Užpildę formą spauskite mygtuką „Klaidų tikrinimas“. Jei viską įvedėte teisingai, ekrano apačioje atsidarys papildoma pranešimų skiltis, kurioje bus parašyta, kad klaidų yra 0 ir trys perspėjimai (informaciniai pranešimai). Jei tikrinimas rado klaidų - jas pataisykite. Tada galite spausti mygtuką „Pateikti deklaraciją“</p>
     <p><img src="parama4.png" alt="Prašymo pateikimas" /></p>
