titulinio puslapio pataisymas

--- a/index.html
+++ b/index.html
@@ -67,23 +67,10 @@ layout: default
                       <i class="fa fa-tree fa-stack-1x fa-inverse"></i>
                 </span>
             </div>
-            <div class="media-body">
+            <div class="media-body" style="padding-top:15px;">
                 <h4 class="media-heading">Konsultavimas</h4>
-                <p>....</p>
             </div>
         </div>
-        <!--div class="media">
-            <div class="pull-left">
-                <span class="fa-stack fa-2x">
-                      <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                      <i class="fa fa-car fa-stack-1x fa-inverse"></i>
-                </span>
-            </div>
-            <div class="media-body">
-                <h4 class="media-heading">Vadovai</h4>
-                <p>...</p>
-            </div>
-        </div-->
         <div class="media">
             <div class="pull-left">
                 <span class="fa-stack fa-2x">
@@ -91,9 +78,8 @@ layout: default
                       <i class="fa fa-support fa-stack-1x fa-inverse"></i>
                 </span>
             </div>
-            <div class="media-body">
+            <div class="media-body" style="padding-top:15px;">
                 <h4 class="media-heading">Dokumentacija</h4>
-                <p>...</p>
             </div>
         </div>
     </div>
@@ -105,9 +91,8 @@ layout: default
                       <i class="fa fa-database fa-stack-1x fa-inverse"></i>
                 </span>
             </div>
-            <div class="media-body">
+            <div class="media-body" style="padding-top:15px;">
                 <h4 class="media-heading">Demo aplikacijos</h4>
-                <p>...</p>
             </div>
         </div>
         <div class="media">
@@ -117,25 +102,12 @@ layout: default
                       <i class="fa fa-bomb fa-stack-1x fa-inverse"></i>
                 </span>
             </div>
-            <div class="media-body">
-                <h4 class="media-heading">Mokymo medžiaga</h4>
-                <p><a href="/mokymo_medziaga">...</a></p>
+            <div class="media-body" style="padding-top:15px;">
+                <h4 class="media-heading"><a href="/mokymo_medziaga">Mokymo medžiaga</a></h4>
             </div>
         </div>
     </div>
     <div class="col-md-4">
-        <!--div class="media">
-            <div class="pull-left">
-                <span class="fa-stack fa-2x">
-                      <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                      <i class="fa fa-paper-plane fa-stack-1x fa-inverse"></i>
-                </span>
-            </div>
-            <div class="media-body">
-                <h4 class="media-heading">Prototipavimas</h4>
-                <p>...</p>
-            </div>
-        </div-->
         <div class="media">
             <div class="pull-left">
                 <span class="fa-stack fa-2x">
@@ -143,9 +115,8 @@ layout: default
                       <i class="fa fa-space-shuttle fa-stack-1x fa-inverse"></i>
                 </span>
             </div>
-            <div class="media-body">
+            <div class="media-body" style="padding-top:15px;">
                 <h4 class="media-heading">Renginiai</h4>
-                <p>...</p>
             </div>
         </div>
         <div class="media">
@@ -155,9 +126,8 @@ layout: default
                       <i class="fa fa-recycle fa-stack-1x fa-inverse"></i>
                 </span>
             </div>
-            <div class="media-body">
-                <h4 class="media-heading">Tinklaraštis</h4>
-                <p><a href="https://blog.openmap.lt" target="_blank">blog.openmap.lt</a></p>
+            <div class="media-body" style="padding-top:15px;">
+                <h4 class="media-heading"><a href="https://blog.openmap.lt" target="_blank">Tinklaraštis</a></h4>
             </div>
         </div>
     </div>
