fix: obfuscate email address

--- a/contact.html
+++ b/contact.html
@@ -24,9 +24,7 @@ layout: default
         <p>
             <b>Asociacija "Atvirasis žemėlapis"</b><br>Dociškių g. 3-R20<br>Vilnius LT–06154<br>Lietuva<br>
         </p>
-        <!--p><i class="fa fa-phone"></i> +370 685 04737</p-->
-        <!--p><i class="fa fa-phone"></i> +370 600 47434</p-->
-        <p><i class="fa fa-envelope-o"></i> <a href="mailto:info@openmap.lt">info@openmap.lt</a></p>
+        <p><i class="fa fa-envelope-o"></i> <a href="javascript:location='mailto:\u0069\u006e\u0066\u006f\u0040\u006f\u0070\u0065\u006e\u006d\u0061\u0070\u002e\u006c\u0074';void 0"><script type="text/javascript">document.write('\u0069\u006e\u0066\u006f\u0040\u006f\u0070\u0065\u006e\u006d\u0061\u0070\u002e\u006c\u0074')</script></a></p>
         <p><i class="fa fa-id-card-o"></i> Įmonės kodas 304445189</p>
     </div>
 </div>
